Correções de traduções.

--- a/ilevus.Resources/Messages.resx
+++ b/ilevus.Resources/Messages.resx
@@ -535,7 +535,7 @@
     <value>O sobrenome é obrigatório.</value>
   </data>
   <data name="LabelUserNotFound" xml:space="preserve">
-    <value>Nenhum usuário encontrado.____</value>
+    <value>Nenhum usuário encontrado.</value>
   </data>
   <data name="ValidationPictureMaxSize" xml:space="preserve">
     <value>A foto deve ter no máximo 1MB.</value>
@@ -557,5 +557,20 @@
   </data>
   <data name="TextSendPicture" xml:space="preserve">
     <value>Selecione a foto que você deseja enviar:</value>
+  </data>
+  <data name="SexFemale" xml:space="preserve">
+    <value>Feminino</value>
+  </data>
+  <data name="SexMale" xml:space="preserve">
+    <value>Masculino</value>
+  </data>
+  <data name="TextEmailWillNotBeShared" xml:space="preserve">
+    <value>Nós não compartilharemos o seu endereço de email privado com outros usuários.</value>
+  </data>
+  <data name="TextPhoneHelp" xml:space="preserve">
+    <value>Ex: "011 998886677". Seu número de telefone adiciona mais segurança à sua conta na Ilevus. Nós não iremos compartilhar essa informação com outros usuários.</value>
+  </data>
+  <data name="ValidationEmailExists" xml:space="preserve">
+    <value>Este endereço de e-mail já está em uso.</value>
   </data>
 </root>
