Tags do banner.

--- a/ilevus.Resources/Messages.resx
+++ b/ilevus.Resources/Messages.resx
@@ -490,10 +490,10 @@
     <value>Crie a sua conta agora</value>
   </data>
   <data name="TextSlogan" xml:space="preserve">
-    <value>Conduzindo seu sucesso</value>
+    <value>Conduza seu sucesso</value>
   </data>
   <data name="TextSloganDescription" xml:space="preserve">
-    <value>Encontre os melhores profissionais de consultoria e coaching para auxiliá-lo em sua carreira profissional.</value>
+    <value>Encontre os melhores profissionais de coaching e consultoria profissional do mundo.</value>
   </data>
   <data name="TextTypeYourEmail" xml:space="preserve">
     <value>Digite seu e-mail.</value>
