Seleção de países com nomes nativos e correção do tether bugado.

--- a/ilevus.Resources/Messages.resx
+++ b/ilevus.Resources/Messages.resx
@@ -792,4 +792,7 @@
   <data name="LabelWorkHere" xml:space="preserve">
     <value>Ainda trabalho aqui</value>
   </data>
+  <data name="TextSelectYourCountry" xml:space="preserve">
+    <value>Selecione seu país</value>
+  </data>
 </root>
