Dropdown de notificacoes e correcoes na listagem de resultados da busca

--- a/ilevus.Resources/Messages.resx
+++ b/ilevus.Resources/Messages.resx
@@ -813,4 +813,7 @@
   <data name="LabelService" xml:space="preserve">
     <value>Serviço</value>
   </data>
+  <data name="TextNoNotifications" xml:space="preserve">
+    <value>Você não tem nenhuma notificação</value>
+  </data>
 </root>
