Adicionado mock do card de email no perfil do usuario

--- a/ilevus.Resources/Messages.resx
+++ b/ilevus.Resources/Messages.resx
@@ -819,4 +819,7 @@
   <data name="TextPresent" xml:space="preserve">
     <value>Presente</value>
   </data>
+  <data name="LabelEmailAddress" xml:space="preserve">
+    <value>Endereço de email</value>
+  </data>
 </root>
